# fssentry

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cli.cpp  cli.h  delta.cpp  delta.h  etw_capture.cpp  etw_capture.h  hash.h  main.cpp  process_tracker.cpp  process_tracker.h  snapshot_store.cpp  snapshot_store.h  version_tracker.cpp  version_tracker.h
